adjusted grid + flex to stop overlap

--- a/style.css
+++ b/style.css
@@ -181,21 +181,23 @@ h2 {
 
 /* main content start */
 #content {
+    display: flex;
+    flex: 1;
+    /* gap: 30px; */
     grid-area: content;
     grid-template: 1fr 1fr 1fr / 1fr 1fr 0.62fr;
     grid-template-areas:
     "stuff-cards stuff-cards more-other"
     "stuff-cards stuff-cards more-other"
     "stuff-cards stuff-cards more-other";
+    justify-content: center;
 }
 
 .stuff-cards {
     grid-area: stuff-cards;
-    grid-template-rows: 0.3fr 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
     justify-items: center;
-    overflow: auto;
-    padding: 5px 30px 5px 30px;
+    /* padding: 5px 30px 5px 30px; */
+    
 }
 
 .card {
@@ -209,34 +211,28 @@ h2 {
     grid-area: 1 / 1 / 2 / 4;
 }
 
-.card-one:first-child {
+.card-one:nth-child(2) {
     grid-area: 2 / 1 / 3 / 2;
 }
 
-.card-one:nth-child(2) {
+.card-one:nth-child(3) {
     grid-area: 2 / 2 / 3 / 3;
 }
 
-.card-one:nth-child(3) {
+.card-one:nth-child(4) {
     grid-area: 3 / 1 / 4 / 2;
 }
 
-.card-one:nth-child(4) {
+.card-one:nth-child(5) {
     grid-area: 3 / 2 / 4 / 3;
 }
 
-.card-one:nth-child(5) {
+.card-one:nth-child(6) {
     grid-area: 4 / 1 / 5 / 2;
 }
 
 .card-one:last-child {
     grid-area: 4 / 2 / 5 / 3;
-}
-
-.more-other {
-    grid-area: more-other;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr;
 }
 
 .card-one {
@@ -265,10 +261,38 @@ span{
     gap: 30px;
 }
 
+.more-other {
+    grid-area: more-other;
+    padding: 10px;
+    position: relative;
+}
+
 .card-two {
     height: 305px;
+    padding: 0px 10px 0px 20px;
     width: 250px;
 }
+
+.card-two > div {
+    border-bottom: 1px solid gray;
+    
+}
+
+.card-two > div > div {
+    border-bottom: 1px solid gray;
+}
+
+.more-other-h5 {
+    font-size: 12px;
+    margin-bottom: 0;
+}
+
+.more-txt {
+    font-size: 10px;
+    margin-top: 0;
+}
+
+
 
 /* border to help visualise grid */
 /* #content, .project-cards, .ann-trend, .card {
